fix(app): resolve resource leaks and security issues identified in code review
- Fix resource leak in SnapshotHistoryService by using try-with-resources for Files.list()
- Add path traversal protection in SnapshotHistoryService.loadSnapshot()
- Improve thread-safety in SimulationService by marking context as volatile
- Use Java 16+ .toList() for cleaner collection stream